# busca_voo

./: Busca Voo Skiplagged.ipynb  README.md  busca_voo_2sites.py  busca_voo_com_urls_txt.ipynb  busca_voo_kayak.py  busca_voo_kayak_1data.py  busca_voo_kayak_2datas.py  busca_voo_kayak_skip.py  busca_voo_mytrip.py  busca_voo_skip.py  busco_voo_1trecho.py  euro_volta_kayak.csv  euro_volta_skip.csv  grafico_precos_RetornoParis.ipynb  pyproject.toml  tabela_logs.ipynb  teste_cod_chat.ipynb  urls.txt  variacao_valores.ipynb
app/kayak/: csv_exporter.py  csv_exporter_kayak.py  csv_exporter_skip.py  email_handler.py  main.py  main_ida_volta.py  main_kayak_skip.py  price_processor.py  price_processor_kayak.py  price_processor_skip.py  url_generator.py
