[tool.poetry]
name = "busca_voo"
version = "0.1.0"
description = "Automação para pesquisa de passagens aéreas com Python e Web Scraping"
authors = ["Seu Nome <seuemail@example.com>"]
license = "MIT"
homepage = "https://github.com/soutes/busca_voo"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
selenium = "^4.1.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"